--- a/style.css
+++ b/style.css
@@ -162,7 +162,6 @@ input {
     font-family: "Helvetica";
     font-weight: 400;
     margin-top: 0.4vw;
-    margin-bottom: 0.4vw;
 }
 
 .name {
@@ -176,10 +175,11 @@ input {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 20vh;
+    height: 19vh;
 }
 
 .latestTxt {
+    justify-content: space-evenly;
     margin-left: 0.8vw;
     display: flex;
     flex-direction: column;
@@ -188,11 +188,11 @@ input {
 }
 hr {
     color: #000000;
+    border: 0.1vh solid black;
 }
 h3 {
     font-size: 1.35vw;
-    margin-top: 0.7vw;
-    margin-bottom: 0.4vw;
+    margin-top: 0.2vw;
 }
 
 .rating h2 {
@@ -202,6 +202,7 @@ h3 {
     margin-left: 0.4vw;
 }
 .rating {
+    margin-bottom: 0.2vw;
     display: flex;
     flex-direction: row;
 }
